fixed spacing issue between projects and resume

--- a/src/style.css
+++ b/src/style.css
@@ -20,10 +20,11 @@
 
 /* parallax section components */
 .parallax-section {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 /*background color*/
